# learning

./: .gitignore  README.md
ros_basics/docker/: Dockerfile  startup.sh
ros_basics/task_1/firmware_nucleo_144_cdc/: .cproject  .mxproject  .project  SimpleCDCStm32F767.ioc  SimpleCDCStm32F767.launch
ros_basics/task_1/firmware_nucleo_144_ftdi/: .cproject  .mxproject  .project  SimpleUsartStm32F767 Debug.launch  SimpleUsartStm32F767.ioc
ros_basics/task_1/hello_world/: CMakeLists.txt  package.xml
ros_basics/task_1/hello_world/src/: hello_world_node.cpp
ros_basics/task_2/hello_params/: CMakeLists.txt  package.xml
ros_basics/task_2/hello_params/launch/: process.launch
ros_basics/task_2/hello_params/src/: hello_params_node.cpp
ros_basics/task_3/hello_msgs/: CMakeLists.txt  package.xml
ros_basics/task_3/hello_msgs/msg/: Print.msg
ros_basics/task_3/hello_printer/: CMakeLists.txt  package.xml
ros_basics/task_3/hello_printer/launch/: printer.launch
ros_basics/task_3/hello_printer/src/: hello_printer_node.cpp
ros_basics/task_4/hello_hardware/: CMakeLists.txt  package.xml
ros_basics/task_4/hello_hardware/firmware/: .cproject  .mxproject  .project  HelloStm32.ioc  HelloStm32.launch
ros_basics/task_4/hello_hardware/firmware/Core/Inc/: main.h
ros_basics/task_4/hello_hardware/firmware/Core/Src/: mainpp.cpp  stm32f7xx_it.c  usart.c
ros_basics/task_4/hello_hardware/firmware/rosserial/Inc/: STM32Hardware.h
ros_basics/task_4/hello_hardware/firmware_411_ediscovery/: .mxproject
ros_basics/task_4/hello_hardware/firmware_411_ediscovery/Core/Inc/: main.h
ros_basics/task_4/hello_hardware/firmware_411_ediscovery/Core/Src/: gpio.c  i2s.c  main.c
ros_basics/task_4/hello_hardware/firmware_411_ediscovery_ftdi/: .cproject  .project  HelloSTM32F411.ioc
ros_basics/task_4/hello_hardware/firmware_411_ediscovery_ftdi/Core/Inc/: stm32f4xx_it.h
ros_basics/task_4/hello_hardware/firmware_411_ediscovery_ftdi/Core/Src/: dma.c  mainpp.cpp  spi.c  stm32f4xx_it.c  usart.c
ros_basics/task_4/hello_hardware/firmware_nucleo_144/: .mxproject  HelloStm32.launch
ros_basics/task_4/hello_hardware/firmware_nucleo_144/Core/Inc/: stm32f7xx_it.h
ros_basics/task_4/hello_hardware/firmware_nucleo_144/Core/Src/: main.c  stm32f7xx_it.c  usart.c
ros_basics/task_4/hello_hardware/firmware_nucleo_144/rosserial/Inc/hello_msgs/: Print.h
ros_basics/task_4/hello_hardware/firmware_nucleo_144_cdc/: .cproject  .mxproject  .project  RosSerialStm32F767_CDC.ioc  RosSerialStm32F767_CDC.launch
ros_basics/task_4/hello_hardware/firmware_nucleo_144_cdc/Core/Inc/: mainpp.h
ros_basics/task_4/hello_hardware/firmware_nucleo_144_cdc/Core/Src/: main.c  mainpp.cpp
ros_basics/task_4/hello_hardware/firmware_nucleo_144_cdc/USB_DEVICE/App/: usbd_cdc_if.c  usbd_cdc_if.h
ros_basics/task_4/hello_hardware/firmware_nucleo_144_cdc/rosserial/Inc/: STM32Hardware.h
ros_basics/task_4/hello_hardware/firmware_nucleo_144_ftdi/: HelloStm32.ioc
ros_basics/task_4/hello_hardware/firmware_nucleo_144_ftdi/Core/Inc/: main.h
ros_basics/task_4/hello_hardware/firmware_nucleo_144_ftdi/Core/Src/: usart.c
ros_basics/task_4/hello_hardware/launch/: network.launch  serial.launch
ros_basics/task_4/hello_hardware/scripts/: make_library.sh
(+26 files in other folders)
