<?xml version="1.0"?>
<package format="2">
  <name>hello_world</name>
  <version>1.0.0</version>
  <description>The hello_world package</description>

  <maintainer email="ROS.Ukraine@todo.todo">ROS Ukraine Community</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>
</package>
