<?xml version="1.0"?>
<package format="2">
  <name>hello_hardware</name>
  <version>1.0.0</version>
  <description>The hello_hardware package</description>

  <maintainer email="ROS.Ukraine@todo.todo">ROS Ukraine Community</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rosserial_stm32</exec_depend>
  <exec_depend>rosserial_python</exec_depend>
</package>
